log
Thu 24 Aug 2023 08:27:35 PM UTC: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
3d392bf
Thu 24 Aug 2023 08:30:54 PM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  9|3
total_score: 35/70
e6205e9
Thu 24 Aug 2023 08:35:31 PM UTC: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
list.c:88:7: error: redefinition of ‘createNode’
   88 | Node *createNode(void *data) {
      |       ^~~~~~~~~~
list.c:22:8: note: previous definition of ‘createNode’ with type ‘Node *(void *)’
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
Compilation failed
42585c7
